<resources>
    <string name="app_name">StarPicFinder</string>
    <string name="results_title">"Position de l'image"</string>
    <string name="results_ad">"A.D. [°] : "</string>
    <string name="results_dec">"Dec. [°] : "</string>
    <string name="results_rot">"Rot. [°] : "</string>
    <string name="settings_title">"Réglages de l'image"</string>
    <string name="settings_resolution">Résolution du capteur [µm]:</string>
    <string name="settings_focale">Longueur focale utilisée [mm]:</string>
    <string name="settings_min_lum">Luminance minimale pour la détection (0-255):</string>
    <string name="settings_box_size">Taille du cadre de détection [px]</string>
    <string name="settings_save">Enregistrer</string>
    <string name="title_activity_enter_settings">Paramètres</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>